# lc3-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  go
_archive/assembler-parser-combinator/: Cargo.toml  error-test-cases.md  go
_archive/assembler-parser-combinator/src/: lib.rs
_archive/assembler-parser-combinator/tests/: fill_offset.asm  jsrr.asm  lea.asm  sti.asm
asm-test/: test.asm  test.dbg  test.lst  test.vconst
assembler/: .gitignore  .gitmodules  Cargo.toml  go  nom.md
assembler-old/src/: pretty_parser_error.rs
assembler-old/tests/: jsr.asm  ldr.asm  not.asm  str.asm  stringz_offset.asm  trap.asm
assembler/src/: emitter.rs  errors.rs  grammar.pest  lib.rs  main.rs  parser.rs  pretty_parser_error.rs  tokens.rs
assembler/testcases/complex/: divisible.asm
assembler/testcases/simple/: add_register.asm  and.asm  br_backwards.asm  halt.asm  lea.asm  memory_mapped_io.asm  os.asm
assembler/tests/: all.rs  fill_label.asm  jmp_ret.asm  lc3os.asm  ld_late.asm  ldi.asm  parsing.rs  rti.asm  simple-add.asm  simple-add.asm.out  st.asm
peg-assembler/: Cargo.toml
peg-assembler/src/: grammar.pest
repl/: Cargo.toml
repl/src/: main.rs  peripherals.rs
src/: main.rs  opcodes.rs  parser.rs  state.rs  util.rs
testcases/assembly/: rti.asm  str.asm  trap.asm
tests/: br.asm  jsr.asm  ldi.asm  puts.asm  sti.asm
virtual-machine/: Cargo.toml  go
virtual-machine/src/: debug.rs  lib.rs  main.rs  opcodes.rs  parser.rs  peripheral.rs  state.rs  util.rs  wasm.rs
virtual-machine/testcases/complex/: divisible.asm
virtual-machine/testcases/simple/: add_immediate.asm  jmp.asm  jsr_register.asm  ldr.asm  not.asm
virtual-machine/tests/: ld.asm  ldi.asm  puts.asm  st.asm  vm.rs
web/: .gitignore  deploy.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
web/src/: bootstrap_browser.js  bootstrap_worker.js
web/src/browser/: editor.ts  examples.ts  index.html  index.ts  style.scss
web/src/shared/: messages.ts
web/src/worker/: worker.ts
