[package]
name = "lc3as"
version = "0.1.0"
authors = ["Lucas Jenss <public@x3ro.de>"]
edition = "2021"

[dependencies]
pest = "2.1"
pest_derive = "2.1"
anyhow = "1.0.51"
num-traits = "0.2"
num-derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }


#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
pretty_assertions = "1.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
