[package]
name = "repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "9.1.1"
termion = "1.5.6"
ctrlc = "3.2.1"
tui = "0.16"
clap = "2.32.0"
termios = "0.3.1"
pretty_env_logger = "0.4"
log = "0.4"
anyhow = "1.0.51"

lc3vm = { path = "../virtual-machine" }